// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fieldset all options 1`] = `
<body>
  <div>
    <div
      class="sc-fqkvVR sc-gsFSXq cuUXqb gXxntV"
      data-testid="oak-inline-banner"
    >
      <div
        class="sc-fqkvVR fgBWrW"
      >
        <div
          class="sc-fqkvVR erqloa"
          data-testid="inline-banner-icon"
        >
          <img
            alt="info"
            class="sc-dcJsrY beWtwI"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1709052869/icons/Icon_Info_vsx3xi.svg"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
      </div>
      <div
        class="sc-fqkvVR TgDlp"
        data-testid="inline-banner-message"
      >
        Info example
      </div>
    </div>
    <div
      class="sc-fqkvVR sc-gsFSXq kIGjQG gXxntV"
      data-testid="oak-inline-banner"
    >
      <div
        class="sc-fqkvVR fgBWrW"
      >
        <div
          class="sc-fqkvVR erqloa"
          data-testid="inline-banner-icon"
        >
          <img
            alt="info"
            class="sc-dcJsrY beWtwI"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1709052869/icons/Icon_Info_vsx3xi.svg"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
      </div>
      <div
        class="sc-fqkvVR TgDlp"
        data-testid="inline-banner-message"
      >
        Neutral example
      </div>
    </div>
    <div
      class="sc-fqkvVR sc-gsFSXq gIcfVA gXxntV"
      data-testid="oak-inline-banner"
    >
      <div
        class="sc-fqkvVR fgBWrW"
      >
        <div
          class="sc-fqkvVR erqloa"
          data-testid="inline-banner-icon"
        >
          <img
            alt="success"
            class="sc-dcJsrY beWtwI"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1699895534/icons/Icon-Success_aiiprx.svg"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
      </div>
      <div
        class="sc-fqkvVR TgDlp"
        data-testid="inline-banner-message"
      >
        Success example
      </div>
    </div>
    <div
      class="sc-fqkvVR sc-gsFSXq WVWoR gXxntV"
      data-testid="oak-inline-banner"
    >
      <div
        class="sc-fqkvVR fgBWrW"
      >
        <div
          class="sc-fqkvVR erqloa"
          data-testid="inline-banner-icon"
        >
          <img
            alt="warning"
            class="sc-dcJsrY beWtwI"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1704901279/icons/zzszodmk7fvxm9xzzg9s.svg"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
      </div>
      <div
        class="sc-fqkvVR TgDlp"
        data-testid="inline-banner-message"
      >
        Alert example
      </div>
    </div>
    <div
      class="sc-fqkvVR sc-gsFSXq dDVBBt gXxntV"
      data-testid="oak-inline-banner"
    >
      <div
        class="sc-fqkvVR fgBWrW"
      >
        <div
          class="sc-fqkvVR erqloa"
          data-testid="inline-banner-icon"
        >
          <img
            alt="error"
            class="sc-dcJsrY cGPxx"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1699895534/icons/Icon-Error_r25aza.svg"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
      </div>
      <div
        class="sc-fqkvVR TgDlp"
        data-testid="inline-banner-message"
      >
        Error example
      </div>
    </div>
  </div>
</body>
`;

exports[`Fieldset default options 1`] = `
<body>
  <div>
    <div
      class="sc-fqkvVR sc-gsFSXq cuUXqb gXxntV"
      data-testid="oak-inline-banner"
    >
      <div
        class="sc-fqkvVR fgBWrW"
      >
        <div
          class="sc-fqkvVR erqloa"
          data-testid="inline-banner-icon"
        >
          <img
            alt="info"
            class="sc-dcJsrY beWtwI"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1709052869/icons/Icon_Info_vsx3xi.svg"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
      </div>
      <div
        class="sc-fqkvVR TgDlp"
        data-testid="inline-banner-message"
      >
        Default example
      </div>
    </div>
  </div>
</body>
`;
